--- a/E-CommersITSense/E-Commerce/Views/Home/Index.cshtml
+++ b/E-CommersITSense/E-Commerce/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@model E_Commerce.Model.Models.ECommerce.User
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>@Model.nickname</h2>
 
