--- a/E-CommersITSense/E-Commerce/Views/Shared/_Layout.cshtml
+++ b/E-CommersITSense/E-Commerce/Views/Shared/_Layout.cshtml
@@ -9,41 +9,55 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
-    
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="@Url.Action("Index","Home")">EComerce</a>
+        <a class="navbar-brand" href="@Url.Action("Index", "Home")">EComerce</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+
                 
-                <li class="nav-item dropdown navbar-light">
+                <li class="nav-item active">
+                    <a class="nav-link" href="@Url.Action("Index", "Category")">Categorias</a>
+                </li>
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        @Model.nickname
+                        @{ E_Commerce.Model.Models.ECommerce.User oUser = Session["DataSession"] != null ? (E_Commerce.Model.Models.ECommerce.User)Session["DataSession"] : new E_Commerce.Model.Models.ECommerce.User();}
+
+                        @oUser.nickname 
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="@Url.Action("Index","Profile")">Ver Perfil</a>
                     </div>
                 </li>
-                
+
             </ul>
-         
+
         </div>
+
     </nav>
 
-
-    <div class="container body-content">       
-
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Sebastian Martinez</p>
-        </footer>
+   
+    <div class="p-3 mb-2 bg-light text-dark">
+        <div class="container">
+            <input class="form-control" type="text" name="name" value="" placeholder="Buscar Item" />
+        </div>
     </div>
 
-    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+
+        <div class="container body-content">
+
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Sebastian Martinez</p>
+            </footer>
+        </div>
+
+        <script src="~/Scripts/jquery-3.2.1.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
