--- a/E-CommersITSense/E-Commerce/Views/Item/Index.cshtml
+++ b/E-CommersITSense/E-Commerce/Views/Item/Index.cshtml
@@ -7,10 +7,15 @@
 <h2>@Model.title</h2>
 
 <div class="card">
-    <img class="img-thumbnail" src="@Model.pictures.First().secure_url" alt="Card image cap">
+    <div class="card-img-top">
+        <div class="text-center">
+            <img class="img-responsive" src="@Model.pictures.First().secure_url" alt="Card image cap">
+        </div>
+    </div>
+    <hr />
     <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">@Model.title</h5>
+        <p class="card-text">@Html.Raw(Model.description.plain_text)</p>
         <p class="card-text"><small class="text-muted">@Model.date_created</small></p>
     </div>
 </div>
